--- a/docroot/sites/all/themes/pnwds/sass/components/view/_news--multi-news-block.scss
+++ b/docroot/sites/all/themes/pnwds/sass/components/view/_news--multi-news-block.scss
@@ -14,3 +14,7 @@
     }
   }
 }
+
+#block-views-cod-news-block-1 {
+  @include span-columns($total-columns);
+}
